force-app/main/default/objects/SellerIndication__c/SellerIndication__c.object-meta.xml
<CustomObject>
    <description>[a0J][SellerIndication__c] Objeto que guarda informações sobre Vendedores cujo serão selecionados para atender uma nova conta.</description>
    <label>Indicação de vendedor</label>
    <nameField>
        <label>Indicação de Vendedor</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Indicações de vendedores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>