force-app/main/default/objects/SellerIndication__c/fields/ChannelTxt__c.field-meta.xml
<CustomField>
    <fullName>ChannelTxt__c</fullName>
    <label>Canal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Predial</fullName>
            </value>
            <value>
                <fullName>Irrigação</fullName>
            </value>
            <value>
                <fullName>Infraestrutura</fullName>
            </value>
            <value>
                <fullName>AV1</fullName>
            </value>
            <value>
                <fullName>AV2</fullName>
            </value>
            <value>
                <fullName>CTD</fullName>
            </value>
            <value>
                <fullName>PRT</fullName>
            </value>
            <value>
                <fullName>VJ1</fullName>
            </value>
            <value>
                <fullName>VJ2</fullName>
            </value>
            <value>
                <fullName>VJ3</fullName>
            </value>
            <value>
                <fullName>VRD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>