force-app/main/default/objects/SellerIndication__c/fields/CoordinatorEmailEml__c.field-meta.xml
<CustomField>
    <fullName>CoordinatorEmailEml__c</fullName>
    <label>Email coordenador</label>
    <type>Email</type>
</CustomField>