force-app/main/default/objects/SellerIndication__c/fields/CoordinatorNameTxt__c.field-meta.xml
<CustomField>
    <fullName>CoordinatorNameTxt__c</fullName>
    <label>Coordenador</label>
    <length>40</length>
    <type>Text</type>
</CustomField>