force-app/main/default/objects/SellerIndication__c/fields/CoordinatorPhone__c.field-meta.xml
<CustomField>
    <fullName>CoordinatorPhone__c</fullName>
    <label>Telefone coordenador</label>
    <type>Phone</type>
</CustomField>