force-app/main/default/objects/SellerIndication__c/fields/CustomIDTxt__c.field-meta.xml
<CustomField>
    <fullName>CustomIDTxt__c</fullName>
    <description>Concatenação = Codigo vendedor + Estado + Cidade + Canal</description>
    <externalId>true</externalId>
    <inlineHelpText>Concatenação = Codigo vendedor + Estado + Cidade + Canal</inlineHelpText>
    <label>Id customizado</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>