force-app/main/default/objects/SellerIndication__c/fields/ManagerEmailEml__c.field-meta.xml
<CustomField>
    <fullName>ManagerEmailEml__c</fullName>
    <label>Email gerente</label>
    <type>Email</type>
</CustomField>