force-app/main/default/objects/SellerIndication__c/fields/ManagerNameTxt__c.field-meta.xml
<CustomField>
    <fullName>ManagerNameTxt__c</fullName>
    <label>Gerente</label>
    <length>40</length>
    <type>Text</type>
</CustomField>