force-app/main/default/objects/SellerIndication__c/fields/ManagerPhoneNmb__c.field-meta.xml
<CustomField>
    <fullName>ManagerPhoneNmb__c</fullName>
    <label>Telefone gerente</label>
    <type>Phone</type>
</CustomField>