force-app/main/default/objects/SellerIndication__c/fields/ReferenceSellerTxt__c.field-meta.xml
<CustomField>
    <fullName>ReferenceSellerTxt__c</fullName>
    <label>VendedorReferencia</label>
    <length>50</length>
    <type>Text</type>
</CustomField>