force-app/main/default/objects/SellerIndication__c/fields/SalesOfficeTxt__c.field-meta.xml
<CustomField>
    <fullName>SalesOfficeTxt__c</fullName>
    <label>Escritório de vendas</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Regional CO/NO</fullName>
            </value>
            <value>
                <fullName>Regional MG</fullName>
            </value>
            <value>
                <fullName>Regional Nordeste</fullName>
            </value>
            <value>
                <fullName>Regional RJ/ES</fullName>
            </value>
            <value>
                <fullName>Regional SP Capital</fullName>
            </value>
            <value>
                <fullName>Regional SP Interior</fullName>
            </value>
            <value>
                <fullName>Regional Sul</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>