force-app/main/default/objects/SellerIndication__c/fields/SellerCodeFml__c.field-meta.xml
<CustomField>
    <fullName>SellerCodeFml__c</fullName>
    <formula>SellerLkp__r.SellerNumberNmb__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VendedorCode</label>
    <type>Text</type>
</CustomField>