force-app/main/default/objects/SellerIndication__c/fields/SellerEmailEml__c.field-meta.xml
<CustomField>
    <fullName>SellerEmailEml__c</fullName>
    <label>Email vendedor</label>
    <type>Email</type>
</CustomField>