force-app/main/default/objects/SellerIndication__c/fields/SellerLkp__c.field-meta.xml
<CustomField>
    <fullName>SellerLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendedor</label>
    <referenceTo>Seller__c</referenceTo>
    <relationshipLabel>Indicações de vendedores</relationshipLabel>
    <relationshipName>Indica_es_de_Vendedores</relationshipName>
    <type>Lookup</type>
</CustomField>