force-app/main/default/objects/SellerIndication__c/fields/SellerPhoneNmb__c.field-meta.xml
<CustomField>
    <fullName>SellerPhoneNmb__c</fullName>
    <label>Telefone vendedor</label>
    <type>Phone</type>
</CustomField>