force-app/main/default/objects/SellerIndication__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SellerLkp__c</columns>
    <columns>CoordinatorNameTxt__c</columns>
    <columns>ManagerNameTxt__c</columns>
    <columns>CityTxt__c</columns>
    <columns>StateTxt__c</columns>
    <columns>ChannelTxt__c</columns>
    <columns>SellerPhoneNmb__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>